<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:weightSum="1"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_index"
                android:textSize="@dimen/nomal_font_size"/>

            <TextView
                android:id="@+id/index_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/nomal_font_size"
                android:textColor="@color/textBlack"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_code"
                android:textSize="@dimen/nomal_font_size"/>

            <TextView
                android:id="@+id/area_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/nomal_font_size"
                android:textColor="@color/textBlack"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_name"
                android:textSize="@dimen/nomal_font_size"/>

            <TextView
                android:id="@+id/unit_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/nomal_font_size"
                android:textColor="@color/textBlack"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_barcode"
                android:textSize="@dimen/nomal_font_size"/>

            <TextView
                android:id="@+id/barcode_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/nomal_font_size"
                android:textColor="@color/textBlack"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.45"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_num_string"
                android:textSize="@dimen/nomal_font_size"/>

            <AutoCompleteTextView
                android:id="@+id/bus_num_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16dp"
                android:textColor="@color/textBlack"
                android:hint="차량번호 입력"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trouble_high_code"
                android:textSize="@dimen/nomal_font_size"/>

            <Spinner
                android:id="@+id/trouble_high_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trouble_low_code"
                android:textSize="@dimen/nomal_font_size"/>

            <Spinner
                android:id="@+id/trouble_low_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textSize="@dimen/nomal_font_size"/>

            <EditText
                android:id="@+id/notice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/nomal_font_size"
                android:textColor="@color/textBlack"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>