<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#f0f0f2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_date_string" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/start_day"
                    android:textSize="@dimen/big_font_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="2019-10-10"
                    android:textAlignment="center"
                    android:singleLine="true"
                    android:maxLines="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_time_hour" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style"
                        android:entries="@array/time_hour">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_time_min"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style"
                        android:entries="@array/time_min">

                    </Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_tpye_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/middle_font_size"
                        android:textColor="@color/textBlack"
                        android:gravity="center"
                        android:background="@drawable/input_mute_text"
                        android:layout_margin="2dp"
                        android:text="집계"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/office_string2" />

                    <TextView
                        android:id="@+id/nms_dep_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/middle_font_size"
                        android:textColor="@color/textBlack"
                        android:gravity="center"
                        android:background="@drawable/input_mute_text"
                        android:layout_margin="2dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infra_type" />

                    <Spinner
                        android:id="@+id/nms_infra_type"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style"
                        android:entries="@array/infra_type">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/area_code" />

                    <Spinner
                        android:id="@+id/nms_group"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style">

                    </Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/office_string" />

                    <Spinner
                        android:id="@+id/nms_office_group"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/local_string" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="영업소 입력"
                        android:textSize="@dimen/middle_font_size"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/textBlack"
                        android:imeOptions="actionDone">

                    </EditText>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_string" />

                    <Spinner
                        android:id="@+id/nms_unit_code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trouble_high_code" />

                    <Spinner
                        android:id="@+id/nms_trouble_high_code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style">

                    </Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trouble_low_code" />

                    <Spinner
                        android:id="@+id/nms_trouble_low_code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/care_name" />

                    <Spinner
                        android:id="@+id/nms_care_code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/spinner_style">

                    </Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_barcode" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="기존시리얼 입력"
                        android:textSize="@dimen/middle_font_size"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/textBlack"
                        android:imeOptions="actionDone">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_barcode" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="교체시리얼 입력"
                        android:textSize="@dimen/middle_font_size"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/textBlack"
                        android:imeOptions="actionDone">

                    </EditText>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notice" />

                    <EditText
                        android:id="@+id/reserve_notice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="특이사항 입력"
                        android:textSize="@dimen/middle_font_size"
                        android:textColor="@color/textBlack"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:inputType="text">

                    </EditText>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">
                <Button
                    android:id="@+id/submit_barcode"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="등록 하기"
                    android:background="@drawable/blue_btn"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>