<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_index"
            android:textSize="@dimen/nomal_font_size"/>

        <TextView
            android:textAlignment="center"
            android:id="@+id/index_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nomal_font_size"
            android:textColor="@color/textBlack"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_code"
            android:textSize="@dimen/nomal_font_size"/>

        <TextView
            android:id="@+id/area_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nomal_font_size"
            android:textColor="@color/textBlack"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_name"
            android:textSize="@dimen/nomal_font_size"/>

        <TextView
            android:id="@+id/unit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nomal_font_size"
            android:textColor="@color/textBlack"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_input_layout"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ori_unit_barcode"
            android:textSize="@dimen/nomal_font_size"/>

        <TextView
            android:id="@+id/text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="입력시 터치"
            android:textSize="@dimen/nomal_font_size"
            android:textColor="@color/textBlack"/>

    </LinearLayout>


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_barcode"
            android:textSize="@dimen/nomal_font_size"/>

        <TextView
            android:id="@+id/barcode_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nomal_font_size"
            android:textColor="@color/textBlack"/>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="match_parent">-->
        <!--<CheckBox-->
            <!--android:id="@+id/delete_check"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:layout_weight="1"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <!--<Button-->
    <!--android:id="@+id/submit_btn"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="35dp"-->
    <!--android:background="@drawable/blue_btn"-->
    <!--android:textColor="@color/white"-->
    <!--android:text="X"-->
    <!--android:textSize="@dimen/nomal_font_size"/>-->

    <!--</LinearLayout>-->

</LinearLayout>